Wed Aug 12 22:29:21 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BMakeWorkspaceCreator.pm:
        * modules/WixWorkspaceCreator.pm:

          Cleaned up code.

        * modules/ProjectCreator.pm:

          Reverted one of the performance enhancements from yesterday.  It
          made a faulty assumption that caused issue with the DDS builds.

        * modules/WB26WorkspaceCreator.pm:
        * modules/WorkspaceCreator.pm:

          Added a 'requires_make_coexistence' method to always use
          -make_coexistence without having to pass the option on the command
          line.

Wed Aug 12 17:56:20 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/gacutil.mpb:
          Use prop:microsoft

Wed Aug 12 12:48:20 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/html/MakeProjectCreator.html:
          Fixed broken link

Tue Aug 11 16:08:20 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * docs/html/MakeProjectCreator.html:

          Added a Id tag

        * modules/ProjectCreator.pm:

          Made minor performance enhancements.

        * modules/WB26WorkspaceCreator.pm:

          Added code to only put top-level dependencies in the project
          files.  This build tool doesn't handle indirectly duplicated
          project dependencies very well.

Mon Aug 10 21:40:58 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Return immediately from generate_default_target_names() if the
          project has custom_only set to 1.  We need not waste time setting
          the sharedname, staticname or exename.

        * modules/WinVersionTranslator.pm:

          Cleaned up and commented the code.

Mon Aug 10 17:55:53 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * config/global.features:

          Added disabled features that were missing.

        * devtools/document_template.pl:
